@@ -1,3 +1,9 @@
+2002-09-07  Paul Brook  <paul@nowt.org>
+
+	* trans-intrinsic.c: Remove outdated todo intrinsic list.
+	(g95_get_symbol_for_expr): Remove hack for fortran based intrinsics.
+	(g95_walk_intrinsic_function): Add MINLOC and MAXLOC.
+
 2002-09-06  Paul Brook  <paul@nowt.org>
 
 	* Make-lang.in (F95_ADDITIONAL_OBJS): Add tree_alias_comon.o.
